problems to deploy

--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https:///Lizmadelyne/mi-proyecto-react.io"
+  "homepage": "https://lizmadelyne.github.io/mi-proyecto-react/"
 }
